# bacc-rs

./: Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
