[package]
name = "bacc-rs"
version = "0.1.0"
edition = "2024"
description = "A fast and memory efficient Baccarat engine for calculating results, scoreboards, and related statistics."
license = "LGPL-3.0-only"
repository = "https://github.com/soltez/bacc-rs"
keywords = ["baccarat", "casino"]
categories = ["games"]

[lib]
name = "bacc"

[dependencies]
kev-rs = "0.1.2"
num-bigint = "0.4.6"
num-traits = "0.2.19"
shoe-rs = "0.1.1"

[dev-dependencies]
rstest = "0.23"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
