[package]
name = "bacc-rs"
version = "0.3.0"
edition = "2024"
description = "A no_std shoe-dealer layer for baccarat."
license = "LGPL-3.0-only"
repository = "https://github.com/soltez/bacc-rs"
keywords = ["baccarat", "casino"]
categories = ["games"]

[lib]
name = "bacc"

[dependencies]
bacc-core-rs = "0.2"
kev-rs = "0.2"
shoe-rs = "0.2"

[dev-dependencies]
rstest = "0.23"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
